change old html tags

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="card">
           <div class="card-body">
             <p class="lead">
-              <i>JiakApa?</i>
+              <em>JiakApa?</em>
               finds the nearest restaurants to you!</p>
             <em>
               <strong>Jiak</strong>
