added link to bypass no-cors

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     function getFood() {
       var progressBar = document.getElementById('progressBar');
       progressBar.style.display = 'block';
-      var url = "https://appsbytsl.com/API/V1/Nearby/Food/H4D3S/" + geoPostion.lat + "/" + geoPostion.lng + "/1";
+      var url = "http://cors-anywhere.herokuapp.com/https://appsbytsl.com/API/V1/Nearby/Food/H4D3S/" + geoPostion.lat + "/" + geoPostion.lng + "/1";
       fetch(url).then(function (response) {
         return response.json();
       }).then(function (data) {
