change col size

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('Ice-Creams')">Ice-Cream</button>
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('Undefined')">Others</button>
         </div> -->
-        <div class="col-4">
+        <div class="col-sm-6">
           <select class="form-control" id="dropdownFilter" onchange="filterDropdown()">
             <option value="All">All</option>
             <option value="Full Meals">Full Meals</option>
