--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <!doctype html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>EatBook API</title>
-    <meta name="description" content="EatBook API Sample for Internship">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/bootstrap-slider.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/css/bootstrap-slider.min.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <style>
-      #map {
-        height: 500px;
-      }
-      body {
-        /* background image from https://www.toptal.com/designers/subtlepatterns/*/
-        background-image: url("doodles.png");
-      }
 
-    </style>
-  </head>
-  <body>
-    <!--[if lt IE 8]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
-    <div class="container">
-      <p class="text-center" style="font-family: 'Grand Hotel', cursive; font-size:72px;">JiakApa?</p>
-      <div class="row text-center m-2 justify-content-center">
-        <div class="card">
-          <div class="card-body">
-            <p class="lead">
-              <em>JiakApa?</em>
-              finds the nearest restaurants to you!</p>
-            <em>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>EatBook API</title>
+  <meta name="description" content="EatBook API Sample for Internship">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/bootstrap-slider.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/css/bootstrap-slider.min.css"
+  />
+  <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <style>
+    #map {
+      height: 500px;
+    }
+
+    body {
+      /* background image from https://www.toptal.com/designers/subtlepatterns/*/
+      background-image: url("doodles.png");
+    }
+  </style>
+</head>
+
+<body>
+  <!--[if lt IE 8]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+  <div class="container">
+    <p class="text-center" style="font-family: 'Grand Hotel', cursive; font-size:72px;">JiakApa?</p>
+    <div class="row text-center m-2 justify-content-center">
+      <div class="card">
+        <div class="card-body">
+          <p class="lead">
+            <em>JiakApa?</em> finds the nearest restaurants to you!</p>
+          <em>
               <strong>Jiak</strong>
-            </em>
-            means
-            <em>eat</em>
-            in the dialect of Hokkien,
-            <em>
+            </em> means
+          <em>eat</em> in the dialect of Hokkien,
+          <em>
               <strong>Apa?</strong>
-            </em>
-            is
-            <em>what?</em>
-            in Behasa Melayu.
-          </div>
+            </em> is
+          <em>what?</em> in Behasa Melayu.
         </div>
       </div>
-      <div class="row " id="map"></div>
-      <div class="row justify-content-center p-3">
-        <button type="button" class="btn btn-primary btn-lg" onclick="getFood()">Get Food!</button>
-      </div>
-      <div class="row justify-content-center p-3">
-        <!-- <div class="btn-group" id="btnGrp" role="group" aria-label="Basic example">
+    </div>
+    <div class="row " id="map"></div>
+    <div class="row justify-content-center p-3">
+      <button type="button" class="btn btn-primary btn-lg" onclick="getFood()">Get Food!</button>
+    </div>
+    <div class="row justify-content-center p-3">
+      <!-- <div class="btn-group" id="btnGrp" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('All')">All</button>
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('Full Meals')">Full Meals</button>
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('Coffee-Tea')">Coffee Tea</button>
@@ -63,8 +65,8 @@
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('Ice-Creams')">Ice-Cream</button>
           <button type="button" class="btn btn-primary" onclick="filterFoodDisplay('Undefined')">Others</button>
         </div> -->
-        <div class="col-sm-6">
-          <select class="form-control" id="dropdownFilter" onchange="filterDropdown()">
+      <div class="col-sm-6">
+        <select class="form-control" id="dropdownFilter" onchange="filterDropdown()">
             <option value="All">All</option>
             <option value="Full Meals">Full Meals</option>
             <option value="Coffee-Tea">Coffee & Tea</option>
@@ -72,132 +74,136 @@
             <option value="Ice-Creams">Ice-Cream</option>
             <option value="Undefined">Others</option>
           </select>
-        </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="progress" id="progressBar" style="display:none;">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 300px;"></div>
-        </div>
-      </div>
-      <div class="row justify-content-center p-4" id="resultRow"></div>
     </div>
-    <nav class="navbar navbar-light bg-light justify-content-center text-muted">
-      This is a sample application for the purpose of The Smart Local internship interview. The API is provided by The Smart Local. © Copyright by Joe Tan
-    </nav>
-  </body>
-  <script>
-    var geoPostion = {
-      lat: 0,
-      lng: 0
-    };
-    var map,
-      infoWindow,
-      marker;
-    function initMap() {
-      infoWindow = new google.maps.InfoWindow;
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: {
-          lat: 1.350446,
-          lng: 103.821130
-        },
-        zoom: 12
+    <div class="row justify-content-center">
+      <div class="progress" id="progressBar" style="display:none;">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+          aria-valuemax="100" style="width: 300px;"></div>
+      </div>
+    </div>
+    <div class="row justify-content-center p-4" id="resultRow"></div>
+  </div>
+  <nav class="navbar navbar-light bg-light justify-content-center text-muted">
+    This is a sample application for the purpose of The Smart Local internship interview. The API is provided by The Smart Local.
+    © Copyright by Joe Tan
+  </nav>
+</body>
+<script>
+  var geoPostion = {
+    lat: 0,
+    lng: 0
+  };
+  var map,
+    infoWindow,
+    marker;
+  function initMap() {
+    infoWindow = new google.maps.InfoWindow;
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {
+        lat: 1.350446,
+        lng: 103.821130
+      },
+      zoom: 12
+    });
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function (position) {
+        var pos = {
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
+        };
+        marker.setPosition(pos);
+        map.setCenter(pos);
+        geoPostion = pos;
+      }, function () {
+        handleLocationError(true, marker, map.getCenter());
       });
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function (position) {
-          var pos = {
-            lat: position.coords.latitude,
-            lng: position.coords.longitude
-          };
-          marker.setPosition(pos);
-          map.setCenter(pos);
-          geoPostion = pos;
-        }, function () {
-          handleLocationError(true, marker, map.getCenter());
-        });
-      } else {
-        // Browser doesn't support Geolocation
-        handleLocationError(false, marker, map.getCenter());
-      }
-      marker = new google.maps.Marker({
-        position: {
-          lat: 1.350446,
-          lng: 103.821130
-        },
-        map: map
-      });
-      map.addListener('click', function (e) {
-        marker.setPosition(e.latLng);
-        map.setCenter(e.latLng);
-        map.setZoom(15);
-        geoPostion.lat = e.latLng.lat();
-        geoPostion.lng = e.latLng.lng();
-      });
+    } else {
+      // Browser doesn't support Geolocation
+      handleLocationError(false, marker, map.getCenter());
     }
+    marker = new google.maps.Marker({
+      position: {
+        lat: 1.350446,
+        lng: 103.821130
+      },
+      map: map
+    });
+    map.addListener('click', function (e) {
+      marker.setPosition(e.latLng);
+      map.setCenter(e.latLng);
+      map.setZoom(15);
+      geoPostion.lat = e.latLng.lat();
+      geoPostion.lng = e.latLng.lng();
+    });
+  }
 
-    function handleLocationError(browserHasGeolocation, marker, pos) {
-      marker.setPosition(pos);
-      marker.setTitle(browserHasGeolocation
-        ? 'Error: The Geolocation service failed.'
-        : 'Error: Your browser doesn\'t support geolocation.');
-    }
+  function handleLocationError(browserHasGeolocation, marker, pos) {
+    marker.setPosition(pos);
+    marker.setTitle(browserHasGeolocation
+      ? 'Error: The Geolocation service failed.'
+      : 'Error: Your browser doesn\'t support geolocation.');
+  }
 
-    var returnedResults;
+  var returnedResults;
 
-    function getFood() {
-      var progressBar = document.getElementById('progressBar');
-      progressBar.style.display = 'block';
-      var url = "https://cors-anywhere.herokuapp.com/https://appsbytsl.com/API/V1/Nearby/Food/H4D3S/" + geoPostion.lat + "/" + geoPostion.lng + "/1";
-      fetch(url).then(function (response) {
-        return response.json();
-      }).then(function (data) {
-        progressBar.style.display = 'none';
-        returnedResults = data;
-        if (returnedResults.length == 0) {
-          document.getElementById("resultRow").innerHTML = '<div class="alert alert-danger" role="alert">Your location yields no results!</div>';
-        } else {
-          getFoodDisplay(returnedResults);
-        }
-      });
-    }
-    function getFoodDisplay(returnedResults) {
+  function getFood() {
+    var progressBar = document.getElementById('progressBar');
+    progressBar.style.display = 'block';
+    var url = "https://cors-anywhere.herokuapp.com/https://appsbytsl.com/API/V1/Nearby/Food/H4D3S/" + geoPostion.lat + "/" + geoPostion.lng + "/1";
+    fetch(url).then(function (response) {
+      return response.json();
+    }).then(function (data) {
+      progressBar.style.display = 'none';
+      returnedResults = data;
       if (returnedResults.length == 0) {
-        document.getElementById("resultRow").innerHTML = '<div class="alert alert-danger" role="alert">Your filter yields no results!</div>';
+        document.getElementById("resultRow").innerHTML = '<div class="alert alert-danger" role="alert">Your location yields no results!</div>';
       } else {
-        var resultDisplay = "";
-        for (var i = 0; i < returnedResults.length; i++) {
-          var website = "";
-          var instagram = "";
-          if (returnedResults[i].Website != "#" && returnedResults[i].Website != "-") {
-            website = "<a href='" + returnedResults[i].Website + "' class='card-link' target='_blank'><i class='fa fa-link' aria-hidden='true'></i></a>"
-          }
-          if (returnedResults[i].Instagram != "-" && returnedResults[i].Instagram != "#") {
-            instagram = "<a href='" + returnedResults[i].Instagram + "' class='card-link' target='_blank'><i class='fa fa-instagram' aria-hidden='true'></i></a>"
-          }
-          resultDisplay += "<div class='card bg-light m-2' style='width: 20rem;'><div class='card-body'><h5 class='card-title'>" + returnedResults[i].EntryName + "</h5><h6 class='card-subtitle mb-2 text-muted'>" + returnedResults[i].Category + "</h6><p class='card-text'>" + returnedResults[i].EntryAddress + "</p>" + website + instagram + "</div></div>"
-        }
-        document.getElementById("resultRow").innerHTML = resultDisplay;
-      }
-    }
-
-    function filterDropdown() {
-      var e = document.getElementById("dropdownFilter");
-      var value = e.options[e.selectedIndex].value;
-      filterFoodDisplay(value);
-    }
-
-    function filterFoodDisplay(resType) {
-      if (resType == 'All') {
         getFoodDisplay(returnedResults);
-      } else {
-        var filteredResults = [];
-        for (var i = 0; i < returnedResults.length; i++) {
-          if (returnedResults[i].Category == resType) {
-            filteredResults.push(returnedResults[i]);
-          }
-        }
-        getFoodDisplay(filteredResults);
       }
+    });
+  }
+  function getFoodDisplay(returnedResults) {
+    if (returnedResults.length == 0) {
+      document.getElementById("resultRow").innerHTML = '<div class="alert alert-danger" role="alert">Your filter yields no results!</div>';
+    } else {
+      var resultDisplay = "";
+      for (var i = 0; i < returnedResults.length; i++) {
+        var website = "";
+        var instagram = "";
+        if (returnedResults[i].Website != "#" && returnedResults[i].Website != "-") {
+          website = "<a href='" + returnedResults[i].Website + "' class='card-link' target='_blank'><i class='fa fa-link' aria-hidden='true'></i></a>"
+        }
+        if (returnedResults[i].Instagram != "-" && returnedResults[i].Instagram != "#") {
+          instagram = "<a href='" + returnedResults[i].Instagram + "' class='card-link' target='_blank'><i class='fa fa-instagram' aria-hidden='true'></i></a>"
+        }
+        resultDisplay += "<div class='card bg-light m-2' style='width: 20rem;'><div class='card-body'><h5 class='card-title'>" + returnedResults[i].EntryName + "</h5><h6 class='card-subtitle mb-2 text-muted'>" + returnedResults[i].Category + "</h6><p class='card-text'>" + returnedResults[i].EntryAddress + "</p>" + website + instagram + "</div></div>"
+      }
+      document.getElementById("resultRow").innerHTML = resultDisplay;
     }
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADDj_AmexquNqGSV2JA4CBYhFYGN0fCRU&callback=initMap" async defer></script>
+  }
+
+  function filterDropdown() {
+    var e = document.getElementById("dropdownFilter");
+    var value = e.options[e.selectedIndex].value;
+    filterFoodDisplay(value);
+  }
+
+  function filterFoodDisplay(resType) {
+    if (resType == 'All') {
+      getFoodDisplay(returnedResults);
+    } else {
+      var filteredResults = [];
+      for (var i = 0; i < returnedResults.length; i++) {
+        if (returnedResults[i].Category == resType) {
+          filteredResults.push(returnedResults[i]);
+        }
+      }
+      getFoodDisplay(filteredResults);
+    }
+  }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADDj_AmexquNqGSV2JA4CBYhFYGN0fCRU&callback=initMap" async
+  defer></script>
+
 </html>
