--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 
   var platform = new H.service.Platform({
     'app_id': 'G95WGOGpE1f6SOAvEYbw',
-    'app_code': 'qH4GDZ9uICeUllGEyBkl5g'
+    'app_code': 'qH4GDZ9uICeUllGEyBkl5g',
+    'useHTTPS': true
   });
 
   var geoPostion = {
